[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
copypasta = "0.10.0"
ctrlc = "3.4.2"
home = "0.5.9"
magic-crypt = "3.1.13"
passwords = "3.1.16"
rpassword = "7.3.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
zeroize = "1.7.0"
